--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "dev": "tailwindcss -i ./src/input.css -o ./static/style.css --watch"
+    "dev": "tailwindcss -i ./src/input.css -o ./static/style.css --watch",
+    "build": "tailwindcss -i ./src/input.css -o ./static/style.css --minify"
   },
   "keywords": [],
   "author": "",
